# shariki_sdl3

./: CMakeLists.txt  README.md  app_state.cpp  app_state.h  board.cpp  board.h  score.cpp  score.h  sdl_app.cpp
